--- a/Day2 Task - Basic JS/task3.css
+++ b/Day2 Task - Basic JS/task3.css
@@ -1,23 +1,35 @@
-*{
+* {
     margin: auto;
     padding: auto;
     box-sizing: border-box;
     font-family: poppins;
 }
 
-.header{
+.gradientBg {
+    background: linear-gradient(45deg, #012062, #4a085f);
+}
+
+.header {
     margin: auto;
     width: auto;
     height: 3rem;
     padding: 2rem;
-    background-color:bisque;
     align-items: center;
     justify-content: center;
     display: flex;
+    color: #fff;
     font-size: 2rem;
 }
 
-.make-todolist{
+.container {
+    margin: auto;
+    width: 50%;
+    min-width: 20rem;
+    border-radius: 0.5rem;
+    background-color: #fff;
+}
+
+.make-todolist {
     display: flex;
     margin: 2rem auto;
     height: 5rem;
@@ -26,7 +38,7 @@
     justify-content: center;
 }
 
-.add-tasks{
+.add-tasks {
     width: 90%;
     padding: 0.3rem;
     height: 50%;
@@ -37,7 +49,7 @@
     border-radius: 4px;
     background-color: orangered;
     border: none;
-    color: #FFFFFF;
+    color: #fff;
     text-align: center;
     font-size: 1rem;
     padding: 0.6rem;
@@ -78,15 +90,20 @@
     width: 50%;
 }
 
-.completed-task{
+.todo-content input[type="checkbox"] {
+    margin-right: 0.5rem;
+}
+
+.todo-content label {
+    color: orangered; /* Or any other color you prefer for todo text */
+}
+
+.completed-task {
     display: flex;
     flex-direction: column; 
     width: 50%;
     padding-top: 10rem;
-}
-
-.completed-task {
-    margin-top: 2rem;
+    padding-bottom: 10rem;
 }
 
 .completed-list li {
@@ -95,7 +112,7 @@
 }
 
 .completed-list .delete {
-    display: none; /* Hide delete button for completed tasks */
+    display: none; 
 }
 
 .title {
@@ -115,6 +132,7 @@
     padding: 0.5rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-left: auto; /* Move delete button to rightmost side */
 }
 
 .todo-list .delete:hover {
@@ -124,13 +142,32 @@
 ul {
     margin: 0;
     padding: 0;
-  }
+}
 
-.footer{
-    position: sticky;
-    padding-top: 1rem;
-    align-items: center;
-    justify-content: center;
-    background-color: bisque;
-    height: 2rem;
+footer {
+    text-align: center;
+    margin-top: 12rem; 
+    padding: 1rem;
+    background-color: #333;
+    color: white;
+}
+
+footer p {
+    margin: 0;
+}
+
+@media only screen and (max-width: 768px) {
+    .container {
+        width: 95%;
+        min-width: unset;
+    }
+
+    .make-todolist {
+        width: 90%;
+    }
+
+    .todo-content,
+    .completed-task {
+        width: 90%;
+    }
 }
